# OrangeDownloader

./: Cargo.toml
downloads/: .downloader.sqlite
src/: i18n.rs  main.rs
src/core/: assembler.rs  engine.rs  events.rs  mod.rs  model.rs  planner.rs  store.rs
src/plugins/: mod.rs  registry.rs
src/plugins/adb/: cli.rs  driver.rs  resolver.rs
src/plugins/bt/: driver.rs  resolver.rs
src/plugins/ed2k/: cli.rs  driver.rs  resolver.rs
src/plugins/ftp/: cli.rs  driver.rs  mod.rs  resolver.rs
src/plugins/github/: resolver.rs
src/plugins/http/: cli.rs  driver.rs  mod.rs  resolver.rs
src/plugins/sftp/: cli.rs  driver.rs  resolver.rs
